k8s/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
  labels:
    app: scraper
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: scraper
