k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scraper-svc
  labels:
    app: scraper-dpl
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: scraper-dpl
