k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scraper-ingress
spec:
  defaultBackend:
    service:
      name: scraper-svc
      port:
        number: 3000
